[package]
name = "unified-markdown-editor"
version = "0.1.1"
edition = "2021"

[dependencies]
anyhow = "1.0.52"
pretty_env_logger = "0.5.0"
# dioxus = {version = "0.6.1", features=["default", "desktop" , "router", "web"]}
dioxus = { version = "0.6.3", features = ["logger", "desktop", "router"] }
dioxus-sdk = { version = "0.6", features = ["storage"] }
# sled = "0.34.7"
# chrono = "0.4.38"
reqwest = {version = "0.12.12", features = ["json"]}
serde_json = "1.0.138"
serde = {version = "1.0.217", features = ["derive"]}
tokio = "1.43.0"
regex = "1.11.1"
log = "0.4.25"
tracing = "0.1"

pulldown-cmark = "0.13"
pulldown-cmark-escape = "0.11"
copypasta = "0.10.1"
arboard = "3.4.1"

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
